remove orphan samples

--- a/codesamples.html
+++ b/codesamples.html
@@ -2,6 +2,6 @@
 ---
 {% assign samples = site.posts | where: "type", "Sample" | sort: "title" %}
 
-<h2>Samples <span class="count">({{ samples | size }})</span></h2>
+<h2>Code Samples & Scripts<span class="count">({{ samples | size }})</span></h2>
 
 {% include listings.html listings=samples %}
